--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -104,21 +104,38 @@ jobs:
       continue-on-error: true
       working-directory: terraform/environments/${{ matrix.environment }}
 
-    - name: Scan Terraform  
-      uses: aquasecurity/trivy-action@0.30.0
-      with: 
-        scan-type: 'fs' 
-        scan-ref: '.'  # Path to your Terraform files  
-        format: 'sarif'
-        scanners: 'vuln,secret,misconfig'
-        severity: 'CRITICAL,HIGH,MEDIUM,LOW,UNKNOWN' 
-        exit-code: 0
-        output: 'trivy-terraform-results.sarif' 
+    # - name: Scan Terraform  
+    #   uses: aquasecurity/trivy-action@0.34.1
+    #   with: 
+    #     scan-type: 'fs' 
+    #     scan-ref: '.'  # Path to your Terraform files  
+    #     format: 'sarif'
+    #     scanners: 'vuln,secret,misconfig'
+    #     severity: 'CRITICAL,HIGH,MEDIUM,LOW,UNKNOWN' 
+    #     exit-code: 0
+    #     output: 'trivy-terraform-results.sarif' 
 
-    - name: Upload Trivy scan results to GitHub Security tab
-      uses: github/codeql-action/upload-sarif@v4
+    # The first call to the action will invoke setup-trivy and install trivy
+    - name: Generate Trivy Vulnerability Report
+      uses: aquasecurity/trivy-action@master
       with:
-        sarif_file: 'trivy-terraform-results.sarif'
+        scan-type: "fs"
+        output: trivy-report.json
+        format: json
+        scan-ref: .
+        exit-code: 0
+
+    # - name: Upload Trivy scan results to GitHub Security tab
+    #   uses: github/codeql-action/upload-sarif@v4
+    #   with:
+    #     sarif_file: 'trivy-terraform-results.sarif'
+
+    - name: Upload Vulnerability Scan Results
+      uses: actions/upload-artifact@v4
+      with:
+        name: trivy-report
+        path: trivy-report.json
+        retention-days: 30
     
     # - name: Security Scan - TFSec
     #   run: tfsec .
